# ai_dev_os

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
adapters/: README.md  __init__.py
ai_dev_os/: __init__.py  cli.py  governance.py  integrations.py  retrieval.py  runtime_audit.py  telemetry.py
bootstrap/: __init__.py  create_project.py  init_project.py
checkpoints/: __init__.py  checkpoint.py
compatibility/: __init__.py  compatibility_matrix.json  matrix.py
consumer_contracts/: __init__.py  contracts.py
core/: __init__.py  ai_dev_os_runtime_contracts.py  contracts.py  shared_runtime.py
docs/: adapter-development-guide.md  agent-mode-budget-policy.md  architecture.md  atomic-prompting-guide.md  bounded-governance-history.md  bounded-governance-reuse.md  bounded-runtime-architecture.md  bounded-runtime-consolidation.md  checkpoint-rotation-policy.md  clipboard-continuity-export.md  consumer-integration-guide.md  consumer-migration-guide.md  context-diet-policy.md  context-subset-orchestration.md  continuity-bundle-guide.md  contract-overlap.md  copilot-rollover-workflow.md  copilot-session-rollover-workflow.md  copilot-usage-optimization.md  extension-continuity-recovery.md  extension-development-guide.md  extraction-plan.md  governance-core.md  governance-drift-detection.md  governance-guide.md  governance-health-runtime.md  governance-observability.md  governance-pressure-model.md  governance-trace-runtime.md  governance-trend-window.md  hierarchical-memory-design.md  known-failure-baseline.md  local-bounded-persistence.md  local-first-guide.md  migration-from-monolith.md  mock-provider-adapter.md  multi-repository-continuity.md  openhuman-integration-policy.md  persistence-retention-governance.md  prompt-mode-orchestration.md  (+38 more)
extensions/: __init__.py
governance/: __init__.py  autonomous_budget.py  budget_runtime.py  council_runtime.py  diff_enforcement.py  gpt55_guard.py  model_tiers.py
integrations/: __init__.py  observability.py  runtime.py
prompts/: adversary-only.prompt.md  architecture-review.prompt.md  patch-only.prompt.md  retrieval-first.prompt.md  scientific-runtime.prompt.md  sprint-lite.prompt.md
(+575 files in other folders)
