[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dev-os"
version = "0.1.0a3"
description = "AI-native software engineering runtime for retrieval-first, budget-aware autonomous development"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "iijmiolumia939"}]
keywords = ["ai", "developer-tools", "governance", "retrieval", "telemetry"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.4,<1", "black>=24,<26", "build>=1.0", "twine>=5,<7"]
routing = ["litellm>=1.0"]
telemetry = ["langfuse>=2.0"]
scientific = ["dvc>=3.0"]
coding = ["aider-chat>=0.80"]
litellm = ["litellm>=1.0"]
langfuse = ["langfuse>=2.0"]
dvc = ["dvc>=3.0"]
full = ["litellm>=1.0", "langfuse>=2.0", "dvc>=3.0", "aider-chat>=0.80"]
all = ["litellm>=1.0", "langfuse>=2.0", "dvc>=3.0", "aider-chat>=0.80"]
experimental-openmythos = [
  "transformers>=4.40,<5",
  "safetensors>=0.4,<1",
  "huggingface_hub>=0.23,<1",
]

[project.scripts]
ai-dev-os-init = "bootstrap.init_project:main"

[tool.setuptools.packages.find]
include = [
  "ai_dev_os*",
  "core*",
  "governance*",
  "retrieval*",
  "telemetry*",
  "integrations*",
  "checkpoints*",
  "bootstrap*",
  "adapters*",
  "extensions*",
  "compatibility*",
  "consumer_contracts*",
  "versioning*",
  "release*",
]

[tool.setuptools.package-data]
compatibility = ["compatibility_matrix.json"]
"ai_dev_os.provider_experimental.openmythos_conversion" = [
  "Modelfile.openmythos-exp",
  "requirements.txt",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.black]
target-version = ["py311"]
line-length = 99

[tool.pytest.ini_options]
testpaths = ["tests"]